--- a/lab4/keylogger/client/public/manifest.json
+++ b/lab4/keylogger/client/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#E57A44",
   "background_color": "#ffffff"
 }
